--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <title>Sistema de Monitoreo y Análisis de Calidad del Agua</title>
     
     <!-- Favicon -->
-    <link rel="icon" href="{{ url_for('static', filename='logo.png') }}" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='images/logo.png') }}" type="image/png">
 
     <!-- Vinculando archivo CSS personalizado -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
@@ -22,7 +22,7 @@
 
             <!-- Logo alineado a la izquierda -->
             <a class="navbar-brand" href="{{ url_for('home') }}">
-                <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" height="50">
+                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" height="50">
             </a>
 
             <!-- Botón hamburguesa alineado a la derecha -->
@@ -60,5 +60,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
