--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
       <!-- Logo a la izquierda -->
       <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" height="50">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo">
       </a>
 
       <!-- Ícono de hamburguesa a la derecha que abre el offcanvas -->
@@ -76,3 +76,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
