--- a/static/styles.css
+++ b/static/styles.css
@@ -21,8 +21,8 @@ main {
 }
 
 .navbar-brand img {
-    height: 80px;
-    width: auto;
+    height: 80px important!;
+    width: auto important!;
     transition: transform 0.2s ease;
 }
 
@@ -277,6 +277,7 @@ footer strong {
     padding: 5px;
     font-size: 16px;
 }
+
 
 
 
